<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation,StringEscaping">
    <string name="facebook_app_id">905281856809639</string>
    <string name="fb_login_protocol_scheme">fb167199308469032</string>
    <string name="app_name">EGPCash</string>
    <string name="main">首页</string>
    <string name="mine">我的</string>
    <string name="loan">借款</string>
    <string name="phone">手机号码</string>
    <string name="input_phone">请输入手机号码</string>
    <string name="input_pwd">请输入登录密码</string>
    <string name="immediately_register">立即注册</string>
    <string name="forget_pwd">忘记密码?</string>
    <string name="next">下一步</string>
    <string name="reset_pwd">修改密码</string>
    <string name="input_new_pwd">请设置新的6–16位密码</string>
    <string name="input_anew_pwd">请重新确认密码</string>
    <string name="input_old_pwd">请输入旧密码</string>
    <string name="complete">完成</string>
    <string name="register">注册</string>
    <string name="save">保存</string>
    <string name="about_us">关于我们</string>
    <string name="feed_back">意见反馈</string>
    <string name="order_list">历史订单</string>
    <string name="btn_continue">继续</string>
    <string name="message_list">消息列表</string>
    <string name="new_version_hint">检测到新版本,点击确定跳转至googlePlay更新</string>
    <string name="new_version_title">版本更新</string>
    <string name="new_version_title2">Detect new version!</string>
    <string name="new_version_hint2">The new version provides a better experience and richer functionality,please update.</string>
    <string name="exit_notice">再次按返回键退出</string>
    <string name="error_phone_no">手机号格式不正确，请重新输入</string>
    <string name="error_phone_no_9">Should start with "0"</string>
    <string name="error_network_disable">网络不可用，请先检查网络</string>
    <string name="error_request_fail">请求服务失败，请稍后重试</string>
    <string name="error_url_invalid">请求的url地址错误</string>
    <string name="error_sms_code">验证码错误，请重新输入</string>
    <string name="error_has_not_login">请先登录</string>
    <string name="error_request_fail_reload">请求服务失败，重新加载？</string>
    <string name="error_upload_image_fail">上传图片失败，请重新上传</string>
    <string name="error_permission">请手动打开应用需要的权限</string>
    <string name="error_password_not_same">两次输入不一样，请重新输入</string>
    <string name="error_password_invalid">密码格式不对，需数字和字母组合，请重新输入</string>
    <string name="set_new_password_hint">请设置新的6–16位密码</string>
    <string name="register_success">注册成功</string>
    <string name="tip_mobilePhone">请输入正确格式的手机号码!</string>
    <string name="password_set_ok2">密码设置成功</string>
    <string name="action_settings">设置</string>
    <string name="password">密码</string>
    <string name="submit">提交</string>
    <string name="confirm">确定</string>
    <string name="dialog_cancel">取消</string>
    <string name="logout">退出登录</string>
    <string name="go_login">立即登录</string>
    <string name="prompt">提示</string>
    <string name="required">此字段是必填字段</string>
    <string name="agreement_loan_contract">点击提交申请即同意《个人贷款合同》</string>
    <string name="click_agreement">点击提交即同意</string>
    <string name="click_agreement_contract">《借款合同》</string>
    <string name="click_agreement_hint">Please check the box to continue your application.</string>
    <string name="loan_amount_message">超过%s的金额只适用于优质客户</string>
    <string name="loan_term_message">超过%s的日期只适用于优质客户</string>
    <string name="loan_apply_date">申请日期</string>
    <string name="loan_apply_amount">申请金额</string>
    <string name="loan_actual_amount">合同金额</string>
    <string name="loan_apply_terms">借款期限</string>
    <string name="loan_repay_amount">应还金额</string>
    <string name="loan_disbursed_amount">到手金额</string>
    <string name="loan_repay_date">应还日期</string>
    <string name="loan_apply_status">申请状态</string>
    <string name="loan_apply_hint">您的借款申请正在审核中,预计1–2个工作日内工作人员会联系您,请保持手机畅通!</string>
    <string name="loan_success_hint">*您的借款申请已通过审核,正在放款,预计1–2个工作日会到账;</string>
    <string name="loan_success_hint2">*若未收到款请先与您银行卡所在银行进行核对,其他问题请联系客服:9996662211;</string>
    <string name="loan_failed_hint">本次申请没有通过,建议%s天后再次申请!</string>
    <string name="loan_failed_hint2">请重新上传身份证照片,或者修改其他个人信息!</string>
    <string name="loan_repay_hint">提前还款有助于您提高您下次借款的额度和期限!</string>
    <string name="loan_status_review_title">贷款信息(审核中)</string>
    <string name="loan_status_review">审核中</string>
    <string name="loan_status_apply_success_title">申请通过(放款中)</string>
    <string name="loan_status_apply_success">放款中</string>
    <string name="loan_status_apply_failed">申请失败</string>
    <string name="loan_status_in_payment">待还款</string>
    <string name="loan_status_settle">已结清</string>
    <string name="reapply">再次申请</string>
    <string name="modify">立即修改</string>
    <string name="delay">展期</string>
    <string name="repay">还款</string>
    <string name="loan_how_long">天</string>
    <string name="loan_how_much">EGP </string>
    <string name="php_logo">₱ </string>
    <string name="loan_status_cancel">申请失败(已取消)</string>
    <string name="loan_status_re_upload">待补充证件照</string>
    <string name="loan_hint_re_upload">经审核，您上传的身份证照片不符合要求，请重新上传清晰、有效的证件照片。上传成功后，我们将及时对您的身份信息进行审核，谢谢！</string>
    <string name="re_upload">立即上传</string>
    <string name="select_bank_error">请先选择银行和开卡城市</string>
    <string name="get_code_hint">获取验证码</string>
    <string name="reacquire_code">重新获取</string>
    <string name="get_code">获取验证码</string>
    <string name="your_user_phone">您的手机号码：</string>
    <string name="update_user_phone">手机号码错误,返回首页修改</string>
    <string name="agreement_title">服务协议</string>
    <string name="pay_info_title">支付信息</string>
    <string name="name">姓名</string>
    <string name="bank_name">银行名称(必须填写户名是本人的银行账号)</string>
    <string name="bank_name_hint">请选择银行行名称</string>
    <string name="bank_city">开卡城市</string>
    <string name="bank_city_hint">请选择开卡城市</string>
    <string name="branch_name">分行</string>
    <string name="branch_name_hint">请选择分行</string>
    <string name="bank_num">银行卡号</string>
    <string name="register_title">注册EGPCash账号</string>
    <string name="your_phone_num_hint">您的手机号码</string>
    <string name="btn_submit_apply">提交申请</string>
    <string name="verify_bankname">银行名称是必填字段</string>
    <string name="verify_bankcity">开卡城市是必填字段</string>
    <string name="verify_branchname">分行是必填字段</string>
    <string name="verify_bankcardnum">请输入正确的银行卡号</string>
    <string name="verify_smscode">短信验证码必须有效</string>
    <string name="verify_password">密码格式为6–16位，需要同时包含字母和数字</string>
    <string name="bank_num_hint">请输入卡号</string>
    <string name="no_receive_code">如未收到验证码,请检查您的手机号码是否有误!</string>
    <string name="pay_choice_title">付款方法</string>
    <string name="pay_choice_bank">银行转账</string>
    <string name="pay_choice_cash">现金提取</string>
    <string name="pay_agency_name">机构名称</string>
    <string name="pay_agency_fee">Disbursement Handling Fee</string>
    <string name="pay_agency_hint">Choose offline cash pickup,handling fee will be deducted from your disbursement amount!</string>
    <string name="verify_bankcardnum_china_bank">China Bank Saving is not supported, pls select an bank or offline cash pickup.</string>
    <string name="job_info_title">工作信息</string>
    <string name="loan_intent">贷款目的</string>
    <string name="loan_intent_hint">请选择贷款目的</string>
    <string name="profession">社会身份</string>
    <string name="profession_hint">请选择社会身份</string>
    <string name="working_industry">行业</string>
    <string name="working_industry_hint">请选择行业</string>
    <string name="company_name">公司名称</string>
    <string name="company_name_hint">请输入公司名称</string>
    <string name="job_position">工作职位</string>
    <string name="job_position_hint">请输入工作职位</string>
    <string name="monthly_income">月收入</string>
    <string name="monthly_income_hint">请选择月收入</string>
    <string name="income_frequency">收入频率</string>
    <string name="income_frequency_hint">请选择收入频率</string>
    <string name="next_income_date">下次发薪日期</string>
    <string name="next_income_date_hint">请选择下次发薪日期</string>
    <string name="work_length">工作时长</string>
    <string name="work_length_hint">请选择工作时长</string>
    <string name="company_phone">公司电话</string>
    <string name="company_phone_hint">请输入公司电话</string>
    <string name="relative_name">亲属名</string>
    <string name="relative">亲属联系人</string>
    <string name="relative_name_hint">请输入亲属名</string>
    <string name="relative_phone">亲属手机号</string>
    <string name="relative_phone_hint">请选择亲属手机号</string>
    <string name="relationship">关系</string>
    <string name="relationship_hint">请选择关系</string>
    <string name="permission_hint1">您好！EGPCash需要安全地处理您的数据，以帮助您获得贷款资格。 请允许每个权限以便继续您的贷款申请。</string>
    <string name="permission_title_dialog">温馨提示</string>
    <string name="permission_hint2">EGPCash需要访问您的联系人和短信。我们的系统会通过处理这些信息，来了解您的财务历史记录并建立您的网络。未经您的许可，我们绝不会致电或发送短信给您的联系人。</string>
    <string name="verify_intent">贷款目的是必填字段</string>
    <string name="verify_profession">职业是必填字段</string>
    <string name="verify_workindustry">行业是必填字段</string>
    <string name="verify_companyname">公司名称是必填字段</string>
    <string name="verify_jobposition">工作职位是必填字段</string>
    <string name="verify_monthlyincome">月收入是必填字段</string>
    <string name="verify_incomefrequency">收入频次是必填字段</string>
    <string name="verify_nextincomedate">下次发薪日期是必填字段</string>
    <string name="verify_worktime">工作时长是必填字段</string>
    <string name="verify_officephone">公司电话是必填字段</string>
    <string name="verify_relativesname">亲属名是必填字段</string>
    <string name="verify_relativesname_length">contact\s name must more 2 letters</string>
    <string name="verify_relativesphone">亲属手机号是必填字段</string>
    <string name="verify_relationship">关系是必填字段</string>
    <string name="verify_officephoneerror">公司电话输入错误，请输入有效的电话号码</string>
    <string name="standard_example">标准示例</string>
    <string name="id_card_title">身份证影像</string>
    <string name="understood">明白了</string>
    <string name="upload_front">上传身份证人面照</string>
    <string name="id_card_hint">Please take a clear,colored photo.</string>
    <string name="standard_example_hint">证件照上传示例</string>
    <string name="standard">标准</string>
    <string name="missing_border">边框缺失</string>
    <string name="focus_blur">对焦模糊</string>
    <string name="copy_photo">复印件拍照</string>
    <string name="id_card_attention">EGPCash视用户信息安全与隐私保护为自己的"生命线",我们会严格遵守用户隐私政策,确保用户信息安全</string>
    <string name="id_card_type_title">Document type</string>
    <string name="id_card_title2">Take a selfie while holding your ID</string>
    <string name="ump_title">Unified Multi-Purpose ID</string>
    <string name="sss_title">Social Security System</string>
    <string name="driver_title">Driver\s License</string>
    <string name="id_card_hint1">必须提供手持身份证照片，否则会拒绝申请</string>
    <string name="id_card_hint2">1.将你的身份证放在胸前，不要遮住脸；</string>
    <string name="id_card_hint3">2.身份证需要清晰完整；</string>
    <string name="login">登录</string>
    <string name="login_title_hint">如果你是老用户,请直接登录</string>
    <string name="login_phone_hint">请输入手机号</string>
    <string name="login_password_hint">请输入登录密码</string>
    <string name="login_left_hint">首次登录?</string>
    <string name="login_right_hint">Register First</string>
    <string name="address_province">省/市</string>
    <string name="address_province_hint">请选择省/市</string>
    <string name="address_city">区</string>
    <string name="address_city_hint">请选择区</string>
    <string name="address_county">公社</string>
    <string name="address_county_hint">请选择公社</string>
    <string name="address_detail">街道、门牌号、房间号</string>
    <string name="address_detail_input">第7路第7号</string>
    <string name="address_duration">居住时长</string>
    <string name="address_duration_hint">请选择居住时长</string>
    <string name="a74"> Relative Contact Person 1 </string>
    <string name="a75"> Relative Contact Person 2 </string>
    <string name="a76"> Relative Contact Person 3 </string>
    <string name="a77"> EGPCash is owned/operated/utilized by EGPCash.PH LENDING CORPORATION. </string>
    <string name="a78"> Company Registration No.:CS201814908 Certificate of Authority No.2718 </string>
</resources>