<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:scrollbars="none"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="32dp"
                android:text="@string/login_title_hint"
                android:textColor="@android:color/black"
                android:textSize="@dimen/textSize16" />

            <com.u1.gocashm.view.InputView
                android:id="@+id/input_user_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:digits="0123456789"
                app:hint="@string/login_phone_hint"
                app:inputType="phone"
                app:leftStr="+2"
                app:maxLength="13"
                app:title="@string/phone" />


            <com.u1.gocashm.view.InputView
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hint="@string/login_password_hint"
                app:inputType="password"
                app:maxLength="16"
                app:title="@string/password" />

            <TextView
                android:id="@+id/tv_forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:layout_marginTop="16dp"
                android:text="@string/forget_pwd"
                android:textColor="@color/blue"
                android:textSize="@dimen/textSize14" />

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/shape_blue"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="@dimen/textSize18" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/login_left_hint"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/textSize16" />

                <TextView
                    android:id="@+id/tv_to_main"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/login_right_hint"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/textSize16" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>